--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   web3dart: ^2.1.4
   very_good_analysis: ^2.1.2
   flutter_web3_provider: ^1.0.6
+  lottie: ^1.0.1
   
 
 dev_dependencies:
@@ -55,6 +56,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/var/
+    - assets/anim/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
