--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,7 @@ include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   exclude:
     - "**/*.g.dart"
+    - "lib/services/chain.dart" # ignored for some reason
 linter:
   rules:
     public_member_api_docs: false
