--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,3 +8,4 @@ linter:
     public_member_api_docs: false
     avoid_web_libraries_in_flutter: false
     avoid_print: false
+    avoid_dynamic_calls: false
