--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   very_good_analysis: ^2.1.2
   flutter_web3_provider: ^1.0.6
   lottie: ^1.0.1
+  beamer: ^0.14.1
   flutter_markdown: ^0.6.2
 
 dev_dependencies:
