--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,22 +17,24 @@ jobs:
   
     strategy:
       matrix:
-        # package:
-          # - flutter_hooks
         channel:
+          - master
           # - dev
-          - stable
+          # - stable
 
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-      - uses: erickzanardo/flutter-gh-pages@v3
       - name: Install dependencies
         run: flutter pub get
       - name: Check format
         run: flutter format --set-exit-if-changed .
       - name: Analyze
         run: flutter analyze
+      - uses: Agondev/flutter-gh-pages@v0.1
+        with:
+          baseHref: /autonet-code/
+      # - uses: erickzanardo/flutter-gh-pages@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
