--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -31,10 +31,10 @@ jobs:
         run: flutter format --set-exit-if-changed .
       - name: Analyze
         run: flutter analyze
-      # - uses: Agondev/flutter-gh-pages@v0.1
-        # with:
-        #   baseHref: /autonet-code/
-      - uses: erickzanardo/flutter-gh-pages@v3
+      - uses: Agondev/flutter-gh-pages@v0.2.0
+        with:
+          dartDefine: "hostDest=githubPages"
+      # - uses: erickzanardo/flutter-gh-pages@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
