--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -31,7 +31,7 @@ jobs:
         run: flutter format --set-exit-if-changed .
       - name: Analyze
         run: flutter analyze
-      - uses: Agondev/flutter-gh-pages@master
+      - uses: Agondev/flutter-gh-pages@main
         with:
           dartDefine: "hostDest=githubPages"
       # - uses: erickzanardo/flutter-gh-pages@v3
