--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,8 +29,8 @@ jobs:
         run: flutter pub get
       # - name: Check format
       #   run: flutter format --set-exit-if-changed .
-      - name: Analyze
-        run: flutter analyze
+      # - name: Analyze
+      #   run: flutter analyze
       - uses: Agondev/flutter-gh-pages@main
         with:
           dartDefine: "hostDest=githubPages"
