--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: subosito/flutter-action@v1
       - name: Install dependencies
         run: flutter pub get
-      # - name: Check format
-      #   run: flutter format --set-exit-if-changed .
-      # - name: Analyze
-      #   run: flutter analyze
+      - name: Check format
+        run: flutter format --set-exit-if-changed .
+      - name: Analyze
+        run: flutter analyze
       - uses: Agondev/flutter-gh-pages@main
         with:
           dartDefine: "hostDest=githubPages"
