--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -27,8 +27,8 @@ jobs:
       - uses: subosito/flutter-action@v1
       - name: Install dependencies
         run: flutter pub get
-      - name: Check format
-        run: flutter format --set-exit-if-changed .
+      # - name: Check format
+      #   run: flutter format --set-exit-if-changed .
       - name: Analyze
         run: flutter analyze
       - uses: Agondev/flutter-gh-pages@main
