--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -33,7 +33,7 @@ jobs:
       #   run: flutter analyze
       - uses: Agondev/flutter-gh-pages@main
         with:
-          dartDefine: "hostDest=githubPages"
+          customArgs: --dart-define="hostDest=githubPages"
       # - uses: erickzanardo/flutter-gh-pages@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
