--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,8 +32,8 @@ jobs:
       # - name: Analyze
       #   run: flutter analyze
       - uses: Agondev/flutter-gh-pages@main
-        with:
-          customArgs: --dart-define="hostDest=githubPages"
+#         with:
+#           customArgs: --dart-define="hostDest=githubPages"
       # - uses: erickzanardo/flutter-gh-pages@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
